# Firmware

./: .gitignore  .gitmodules  link_check.txt  snap_mount.dbg
Tools/: upload_qurt.sh
cmake/: CMakeLists_posix.txt  CMakeLists_qurt.txt
cmake/common/: px4_base.cmake
cmake/configs/: .posix_sdflight_legacy.cmake.swo  .qurt_eagle_legacy.cmake.swo  .qurt_sdflight_legacy.cmake.swo  posix_eagle_default.cmake  posix_eagle_legacy_driver_default.cmake  posix_sdflight_default.cmake  posix_sdflight_legacy.cmake  posix_sitl_default.cmake  qurt_eagle_legacy_driver_default.cmake  qurt_sdflight_default.cmake  qurt_sdflight_legacy.cmake
cmake/posix/: px4_impl_posix.cmake
cmake/qurt/: px4_impl_qurt.cmake
flight_plan/: test_circle.plan  test_line.plan  test_parse.plan  test_spin.plan  test_takeoff.plan  test_train_hover.plan
msg/: CMakeLists.txt  elka_msg.msg  elka_msg_ack.msg  elka_packet.msg  nn_in.msg  plan_element_params.msg  vehicle_odometry.msg  vision_velocity.msg
nuttx-configs/px4fmu-v1/nsh/: defconfig
posix-configs/eagle/flight/: .mainapp.config.swo  .px4.config.swo  mainapp.config  px4.config
src/drivers/pwm_out_rc_in/: pwm_out_rc_in.cpp
src/drivers/px4io/: px4io.cpp
src/drivers/snapdragon_uart/: .CMakeLists.txt.swo  .snapdragon_uart.cpp.svr  .snapdragon_uart.cpp.svs  .snapdragon_uart.cpp.svt  .snapdragon_uart.cpp.svu  .snapdragon_uart.cpp.svv  .snapdragon_uart.cpp.svw  .snapdragon_uart.cpp.svx  .snapdragon_uart.cpp.svy  .snapdragon_uart.cpp.svz  .snapdragon_uart.cpp.swo  .snapdragon_uart.h.swo  .snapdragon_uart_devices.cpp.svq  .snapdragon_uart_devices.cpp.svr  .snapdragon_uart_devices.cpp.svs  .snapdragon_uart_devices.cpp.svt  .snapdragon_uart_devices.cpp.svu  .snapdragon_uart_devices.cpp.svv  .snapdragon_uart_devices.cpp.svw  .snapdragon_uart_devices.cpp.svx  .snapdragon_uart_devices.cpp.svy  .snapdragon_uart_devices.cpp.svz  .snapdragon_uart_devices.cpp.swo  .snapdragon_uart_devices.h.svr  .snapdragon_uart_devices.h.svs  .snapdragon_uart_devices.h.svt  .snapdragon_uart_devices.h.svu  .snapdragon_uart_devices.h.svv  .snapdragon_uart_devices.h.svw  .snapdragon_uart_devices.h.svx  .snapdragon_uart_devices.h.svy  .snapdragon_uart_devices.h.svz  .snapdragon_uart_devices.h.swo  .snapdragon_uart_manager.cpp.swo  .snapdragon_uart_manager.h.swo  CMakeLists.txt  TODO.txt  basic_uart.c  basic_uart.cpp  basic_uart.h  (+8 more)
src/drivers/spektrum_rc/: spektrum_rc.cpp
src/examples/ekf_att_pos_estimator/: ekf_att_pos_estimator_main.cpp
src/modules/commander/: accelerometer_calibration.cpp  commander.cpp
src/modules/dataman/: dataman.c
src/modules/ekf2/: ekf2_main.cpp
src/modules/ekf2_replay/: ekf2_replay_main.cpp
src/modules/elka/: README.md
src/modules/elka/common/: .elka.cpp.svz  .elka.h.svx  .elka.h.svy  .elka.h.svz  .elka_comm.cpp.svz  CMakeLists.txt  TODO.txt  elka.cpp  elka.h  elka_comm.cpp  elka_comm.h  ex_msg.txt
src/modules/elka_nn/: CMakeLists.txt  genann.cpp  genann.h  nn.cpp  nn_defines.h  nn_utils.h
src/modules/local_position_estimator/: BlockLocalPositionEstimator.cpp  BlockLocalPositionEstimator.hpp  params.c
src/modules/logger/: logger.cpp  logger.h
src/modules/mavlink/: mavlink_bridge_header.h  mavlink_main.cpp  mavlink_messages.cpp  mavlink_receiver.cpp  mavlink_receiver.h
src/modules/navigator/: mission_block.cpp  navigation.h
src/modules/position_estimator_inav/: position_estimator_inav_main.cpp
src/modules/sdlog2/: sdlog2.c  sdlog2_messages.h
src/modules/sensors/: sensor_params.c
src/modules/simulator/: simulator_mavlink.cpp
src/modules/spektrum_serial_test/: '  (+17 more)
src/projects/: sysdefs.h
src/projects/SnapdragonSerialFramework/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .Makefile.swm  .Makefile.swn  CMakeLists.txt  Makefile
src/projects/SnapdragonSerialFramework.bak/framework/: .CMakeLists.txt.swk  .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  .CMakeLists.txt.swo  CMakeLists.txt
src/projects/SnapdragonSerialFramework.bak/framework/common/: uart_interface.idl
src/projects/SnapdragonSerialFramework.bak/framework/qurt/: .CMakeLists.txt.swm  CMakeLists.txt  gooddog_dsp.c
src/projects/SnapdragonSerialFramework.bak/framework/qurt/inc/: .status.h.swn
src/projects/SnapdragonSerialFramework.bak/framework/qurt/src/: .SFMessenger.cpp.swo  .SFMessenger_qurt.c.swn
src/projects/SnapdragonSerialFramework.bak/framework/snapdragon_linaro/: .CMakeLists.txt.swm  CMakeLists.txt
src/projects/SnapdragonSerialFramework.bak/framework/snapdragon_linaro/src/: SFMessenger.c
src/projects/SnapdragonSerialFramework/cmake/: sf_common.cmake
src/projects/SnapdragonSerialFramework/framework/: .CMakeLists.txt.swk  CMakeLists.txt
src/projects/SnapdragonSerialFramework/framework/common/: .uart_interface.idl.swo
src/projects/SnapdragonSerialFramework/framework/qurt/: .CMakeLists.txt.swm  .CMakeLists.txt.swo  CMakeLists.txt
src/projects/SnapdragonSerialFramework/framework/qurt/inc/: .dsp_log.h.swm  .dsp_log.h.swo  dsp_log.h
src/projects/SnapdragonSerialFramework/framework/qurt/src/: .SFMessenger_qurt.c.swo
src/projects/SnapdragonSerialFramework/framework/snapdragon_linaro/: .CMakeLists.txt.swo
src/projects/SnapdragonSerialFramework/framework/snapdragon_linaro/src/: .SFMessenger.c.swn  .SFMessenger.c.swo
src/projects/SnapdragonSerialFramework/posix/: .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  CMakeLists.txt
src/projects/SnapdragonSerialFramework/posix/inc/: SFMessenger.h  test_uart_posix.h
src/projects/SnapdragonSerialFramework/posix/src/: CMakeLists.txt  test_uart_posix.cpp
src/projects/SnapdragonSerialFramework/qurt/: .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  CMakeLists.txt
src/projects/SnapdragonSerialFramework/qurt/inc/: .SFUartDriver.h.swo  .dsp_log.h.swn  .status.h.swo  SFLog.hpp  SFMessenger.hpp  SFUartDriver.h
src/projects/SnapdragonSerialFramework/qurt/px4/: sf_dummy.cpp
src/projects/SnapdragonSerialFramework/qurt/src/: .CMakeLists.txt.swo  .SFMessenger_qurt.c.swn  .SFUartDriver.cpp.swo  CMakeLists.txt  SFMessenger_qurt.c  SFUartDriver.cpp  SFUart_main.cpp
(+116 files in other folders)
